Mise a jour des conditions d'utilisation + ajout de logos + ajout Consentement

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,39 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Term of use" />
+    <Button
+        android:id="@+id/btn_agree"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="I have read the Terms of Use and give my agreement " />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+
+            android:layout_width="97dp"
+            android:layout_height="89dp"
+            android:layout_weight="1"
+            android:src="@drawable/occitanielogo"/>
+
+        <ImageView
+
+            android:layout_width="46dp"
+            android:layout_height="92dp"
+            android:layout_weight="1"
+            android:src="@drawable/mineslogo"/>
+        <ImageView
+
+            android:layout_width="97dp"
+            android:layout_height="89dp"
+            android:layout_weight="1"
+            android:src="@drawable/universitelogo"/>
+
+    </LinearLayout>
 
     <!--Button
         android:id="@+id/btn_6min"
