--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,9 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
-
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/imt_mines_ales"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+                <ImageView
+
+                    android:layout_width="97dp"
+                    android:layout_height="89dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/occitanielogo"/>
+
+                <ImageView
+
+                    android:layout_width="46dp"
+                    android:layout_height="92dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/mineslogo"/>
+
+                <ImageView
+
+                    android:layout_width="97dp"
+                    android:layout_height="89dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/universitelogo"/>
+
+        </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
